<resources>
    <string name="app_name">360VR</string>
    <string name="tab_one">360°VR</string>
    <string name="tab_two">影视</string>
    <string name="tab_three">直播</string>
    <string name="tab_four">游戏</string>
    <string name="tab_five">我</string>
    <string name="vip">开通VIP</string>
    <string name="huozhong">火种充值</string>
    <string name="app_title">天焱VR</string>
    <string name="setting">系统设置</string>
    <string name="suggest">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="login">登录</string>
    <string name="localCache">我的缓存</string>
    <string name="localMovie">每日签到</string>
    <string name="history">观看历史</string>
    <string name="collection">我的收藏</string>
    <string name="submit">提交</string>
    <string name="collections">收藏</string>
    <string name="sign">签到</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_succeed_today">今日签到成功，增加火种</string>
    <string name="sure">确定</string>
    <string name="have_signed">已签到</string>
    <string name="much_score_int">%1$d 分</string>
    <string name="you_have_sign"><Data><![CDATA[<font color="%1$s">您已连续签到 </font><font color="%2$s">%3$d</font> <font color="%1$s">天，累计获得火种</font>]]></Data></string>
    <string-array name="month_array">
        <item>一月</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>十一月</item>
        <item>十二月</item>
    </string-array>
</resources>
